@@ -10,7 +10,6 @@ import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.ui.MessageType;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.Trinity;
-import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.psi.CommonClassNames;
 import com.intellij.psi.NavigatablePsiElement;
@@ -28,17 +27,13 @@ import org.intellij.grammar.java.JavaHelper;
 import org.intellij.grammar.parser.GeneratedParserUtilBase.Parser;
 import org.intellij.grammar.psi.*;
 import org.intellij.grammar.psi.impl.GrammarUtil;
-import org.intellij.grammar.syntax.SyntaxConstants;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.PrintWriter;
-import java.util.*;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.*;
 
 import static com.intellij.util.containers.ContainerUtil.emptyList;
 import static com.intellij.util.containers.ContainerUtil.map;
@@ -57,10 +52,10 @@ import static org.intellij.grammar.psi.BnfTypes.*;
 
 /**
  * @author gregory
- *         Date 16.07.11 10:41
+ * Date 16.07.11 10:41
  */
-public class ParserGenerator {
-  public static final Logger LOG = Logger.getInstance(ParserGenerator.class);
+public class KotlinParserGenerator extends GeneratorBase {
+  public static final Logger LOG = Logger.getInstance(KotlinParserGenerator.class);
 
   @NotNull
   RuleInfo ruleInfo(BnfRule rule) {
@@ -86,29 +81,12 @@ public class ParserGenerator {
   private final Set<String> myTokensUsedInGrammar = new LinkedHashSet<>();
   private final boolean myNoStubs;
 
-  protected final BnfFile myFile;
-  private final String mySourcePath;
-  private final String myOutputPath;
-  private final String myPsiOutputPath;
-  private final String myPackagePrefix;
-  private final String myGrammarRoot;
-  private final String myGrammarRootParser;
-  private final String myParserUtilClass;
-  private final String myStateHolderClass;
-  private final String myPsiImplUtilClass;
+  protected final String myParserUtilClass;
+  protected final String myPsiImplUtilClass;
   private final String myPsiTreeUtilClass;
 
-  private final NameFormat myIntfClassFormat;
-  private final NameFormat myImplClassFormat;
-
-  private final String myVisitorClassName;
-  private final String myParserTypeHolderClass;
-  private final String myPsiElementTypeHolderClass;
-
-
-  private int myOffset;
-  private PrintWriter myOut;
-  private NameShortener myShortener;
+  protected final String myVisitorClassName;
+  protected final String myTypeHolderClass;
 
   private final RuleGraphHelper myGraphHelper;
   private final ExpressionHelper myExpressionHelper;
@@ -116,26 +94,17 @@ public class ParserGenerator {
   private final BnfFirstNextAnalyzer myFirstNextAnalyzer;
   private final JavaHelper myJavaHelper;
 
-  protected final Names N;
-  protected final GenOptions G;
+  protected final Names NAMES;
   protected final IntelliJPlatformConstants C;
 
-  public ParserGenerator(@NotNull BnfFile psiFile,
-                         @NotNull String sourcePath,
-                         @NotNull String outputPath,
-                         @NotNull String psiOutputPath,
-                         @NotNull String packagePrefix) {
-    myFile = psiFile;
-    mySourcePath = sourcePath;
-    myOutputPath = outputPath;
-    myPsiOutputPath = (psiOutputPath.isEmpty()) ? myOutputPath : psiOutputPath;
-    myPackagePrefix = packagePrefix;
+  public KotlinParserGenerator(@NotNull BnfFile psiFile,
+                               @NotNull String sourcePath,
+                               @NotNull String outputPath,
+                               @NotNull String packagePrefix) {
+    super(psiFile, sourcePath, outputPath, packagePrefix);
 
-    G = new GenOptions(myFile);
-    N = G.names;
+    NAMES = G.names;
 
-    myIntfClassFormat = getPsiClassFormat(myFile);
-    myImplClassFormat = getPsiImplClassFormat(myFile);
     myParserUtilClass = getRootAttribute(myFile, KnownAttribute.PARSER_UTIL_CLASS);
     myPsiImplUtilClass = getRootAttribute(myFile, KnownAttribute.PSI_IMPL_UTIL_CLASS);
     myPsiTreeUtilClass = getRootAttribute(myFile, KnownAttribute.PSI_TREE_UTIL_CLASS);
@@ -145,12 +114,9 @@ public class ParserGenerator {
                       myIntfClassFormat.apply("") + tmpVisitorClass;
     myVisitorClassName = tmpVisitorClass == null || !tmpVisitorClass.equals(StringUtil.getShortName(tmpVisitorClass)) ?
                          tmpVisitorClass : getRootAttribute(myFile, KnownAttribute.PSI_PACKAGE) + "." + tmpVisitorClass;
-    myParserTypeHolderClass = (G.parserApi == GenOptions.ParserApi.Syntax) ? getRootAttribute(myFile, KnownAttribute.SYNTAX_ELEMENT_TYPE_HOLDER_CLASS)
-                                                     : getRootAttribute(myFile, KnownAttribute.ELEMENT_TYPE_HOLDER_CLASS);
-    myPsiElementTypeHolderClass = getRootAttribute(myFile, KnownAttribute.ELEMENT_TYPE_HOLDER_CLASS);
+    myTypeHolderClass = getRootAttribute(myFile, KnownAttribute.ELEMENT_TYPE_HOLDER_CLASS);
 
-    C = (G.parserApi != GenOptions.ParserApi.Syntax) ? IntelliJPlatformConstants.ClassicConstantSet : IntelliJPlatformConstants.SyntaxConstantSet;
-    myStateHolderClass = C.ParserStateHolder;
+    C = IntelliJPlatformConstants.getConstantSetForBnf(myFile);
 
     mySimpleTokens = new LinkedHashMap<>(getTokenTextToNameMap(myFile));
     myGraphHelper = getCached(myFile);
@@ -160,8 +126,6 @@ public class ParserGenerator {
     myJavaHelper = JavaHelper.getJavaHelper(myFile);
 
     List<BnfRule> rules = psiFile.getRules();
-    BnfRule rootRule = rules.isEmpty() ? null : rules.get(0);
-    myGrammarRoot = rootRule == null ? null : rootRule.getName();
     for (BnfRule r : rules) {
       String ruleName = r.getName();
       boolean noPsi = !hasPsiClass(r);
@@ -173,7 +137,6 @@ public class ParserGenerator {
         noPsi ? null : getRulePsiClassName(r, myIntfClassFormat), noPsi ? null : getRulePsiClassName(r, myImplClassFormat),
         noPsi ? null : getAttribute(r, KnownAttribute.MIXIN), noPsi ? null : getAttribute(r, KnownAttribute.STUB_CLASS)));
     }
-    myGrammarRootParser = rootRule == null ? null : ruleInfo(rootRule).parserClass;
     myNoStubs = JBIterable.from(myRuleInfos.values()).find(o -> o.stub != null) == null;
 
     calcFakeRulesWithType();
@@ -277,79 +240,7 @@ public class ParserGenerator {
     }
   }
 
-  private void openOutput(String className) throws IOException {
-    openOutput(className, myOutputPath);
-  }
-  
-  private void openOutput(String className, String outputPath) throws IOException {
-    String classNameAdjusted = myPackagePrefix.isEmpty() ? className : StringUtil.trimStart(className, myPackagePrefix + ".");
-    File file = new File(outputPath, classNameAdjusted.replace('.', File.separatorChar) + ".java");
-    myOut = openOutputInner(className, file);
-  }
-
-  protected PrintWriter openOutputInner(String className, File file) throws IOException {
-    //noinspection ResultOfMethodCallIgnored
-    file.getParentFile().mkdirs();
-    return new PrintWriter(new FileOutputStream(file), false, this.myFile.getVirtualFile().getCharset());
-  }
-
-  private void closeOutput() {
-    myOut.close();
-  }
-
-  public void out(String s, Object... args) {
-    out(format(s, args));
-  }
-
-  public void out(String s) {
-    int length = s.length();
-    if (length == 0) {
-      myOut.println();
-      return;
-    }
-    boolean newStatement = true;
-    for (int start = 0, end; start < length; start = end + 1) {
-      boolean isComment = s.startsWith("//", start);
-      end = StringUtil.indexOf(s, '\n', start, length);
-      if (end == -1) end = length;
-      String substring = s.substring(start, end);
-      if (!isComment && (substring.startsWith("}") || substring.startsWith(")"))) {
-        myOffset--;
-        newStatement = true;
-      }
-      if (myOffset > 0) {
-        myOut.print(StringUtil.repeat("  ", newStatement ? myOffset : myOffset + 1));
-      }
-      myOut.println(substring);
-      if (isComment) {
-        newStatement = true;
-      }
-      else if (substring.endsWith("{")) {
-        myOffset++;
-        newStatement = true;
-      }
-      else if (substring.endsWith("(")) {
-        myOffset++;
-        newStatement = false;
-      }
-      else {
-        newStatement = substring.endsWith(";") || substring.endsWith("}");
-      }
-    }
-  }
-
-  public void newLine() {
-    out("");
-  }
-
-  public @NotNull String shorten(@NotNull String s) {
-    return myShortener.shorten(s);
-  }
-
-  protected void resetOffset() {
-    myOffset = 0;
-  }
-
+  @Override
   public void generate() throws IOException {
     {
       generateParser();
@@ -369,84 +260,13 @@ public class ParserGenerator {
       sortedPsiRules.put(rule.getName(), rule);
       info.superInterfaces = new LinkedHashSet<>(getSuperInterfaceNames(myFile, rule, myIntfClassFormat));
     }
-    if (G.generatePsi) {
-      calcRealSuperClasses(sortedPsiRules);
-    }
-    if (myGrammarRoot != null && (G.generateTokenTypes || G.generateElementTypes || G.generatePsi && G.generatePsiFactory)) {
-      if (G.generatePsi || G.parserApi != GenOptions.ParserApi.Syntax)
-      {
-        openOutput(myPsiElementTypeHolderClass, myPsiOutputPath);
-        try {
-          generateElementTypesHolder(myPsiElementTypeHolderClass,
-                                     sortedCompositeTypes,
-                                     getRootAttribute(myFile, KnownAttribute.TOKEN_TYPE_FACTORY),
-                                     C.ElementTypeBaseClass,
-                                     C.TokenSetClass,
-                                     G.generatePsi,
-                                     false);
-        }
-        finally {
-          closeOutput();
-        }
+    if (myGrammarRoot != null && (G.generateTokenTypes || G.generateElementTypes)) {
+      openOutput(myTypeHolderClass);
+      try {
+        generateElementTypesHolder(myTypeHolderClass, sortedCompositeTypes);
       }
-      if (G.parserApi == GenOptions.ParserApi.Syntax) {
-        openOutput(myParserTypeHolderClass);
-        try {
-          generateElementTypesHolder(myParserTypeHolderClass,
-                                     sortedCompositeTypes,
-                                     null,
-                                     SyntaxConstants.SYNTAX_ELEMENT_TYPE,
-                                     C.ParserNodeSetClass,
-                                     false,
-                                     true);
-        }
-        finally {
-          closeOutput();
-        }
-        var converterClass = getRootAttribute(myFile, KnownAttribute.ELEMENT_TYPE_CONVERTER_FACTORY_CLASS);
-        openOutput(converterClass, myPsiOutputPath);
-        try {
-          generateElementTypesConverter(converterClass,
-                                        getRootAttribute(myFile, KnownAttribute.ELEMENT_TYPE_HOLDER_CLASS),
-                                        myParserTypeHolderClass,
-                                        sortedCompositeTypes);
-        }
-        finally {
-          closeOutput();
-        }
-      }
-    }
-    if (G.generatePsi) {
-      checkClassAvailability(myPsiImplUtilClass, "PSI method signatures will not be detected");
-      myRulesMethodsHelper.buildMaps(sortedPsiRules.values());
-      for (BnfRule rule : sortedPsiRules.values()) {
-        RuleInfo info = ruleInfo(rule);
-        openOutput(info.intfClass, myPsiOutputPath);
-        try {
-          generatePsiIntf(rule, info);
-        }
-        finally {
-          closeOutput();
-        }
-      }
-      for (BnfRule rule : sortedPsiRules.values()) {
-        RuleInfo info = ruleInfo(rule);
-        openOutput(info.implClass, myPsiOutputPath);
-        try {
-          generatePsiImpl(rule, info);
-        }
-        finally {
-          closeOutput();
-        }
-      }
-      if (myVisitorClassName != null && myGrammarRoot != null) {
-        openOutput(myVisitorClassName, myPsiOutputPath);
-        try {
-          generateVisitor(myVisitorClassName, sortedPsiRules);
-        }
-        finally {
-          closeOutput();
-        }
+      finally {
+        closeOutput();
       }
     }
   }
@@ -555,58 +375,102 @@ public class ParserGenerator {
     }
   }
 
+  @Override
+  protected void generateClassHeader(String className, Set<String> imports, String annos, Java javaType, String... supers) {
+    // file header
+    generateFileHeader(className);
+
+    // package declaration
+    String packageName = generatePackageName(className);
+    if (StringUtil.isNotEmpty(packageName)) {
+      out("package %s", packageName);
+      newLine();
+    }
+    String shortClassName = StringUtil.getShortName(className);
+    NameShortener shortener = new NameShortener(packageName, !G.generateFQN);
+
+    // imports
+    Set<String> includedClasses = collectClasses(imports, packageName);
+    shortener.addImports(imports, includedClasses);
+    for (String s : shortener.getImports()) {
+      out("import %s", s);
+    }
+    if (G.generateFQN && imports.contains("#forced")) {
+      for (String s : JBIterable.from(imports).filter(o -> !"#forced".equals(o))) {
+        out("import %s", s);
+      }
+    }
+    newLine();
+
+
+    // class definition annotations
+    if (StringUtil.isNotEmpty(annos)) {
+      out(shortener.shorten(annos));
+    }
+
+    // superclass / interfaces
+    StringBuilder sb = new StringBuilder();
+    var isColonPresent = false;
+    for (String aSuper : supers) {
+      if (StringUtil.isEmpty(aSuper)) continue;
+      if (imports.contains(aSuper)) {
+        aSuper = StringUtil.getShortName(aSuper);
+      }
+      // TODO: primary constructor n stuff
+      if (!isColonPresent) {
+        sb.append(": ").append(shortener.shorten(aSuper));
+        isColonPresent = true;
+      }
+      else {
+        sb.append(", ").append(shortener.shorten(aSuper));
+      }
+    }
+
+    // type header itself
+    out("%s %s%s {", Case.LOWER.apply(javaType.name()).replace('_', ' '), shortClassName, sb.toString());
+    newLine();
+
+    myShortener = shortener;
+  }
+
   public void generateParser(String parserClass, Collection<String> ownRuleNames) {
     List<String> parserImports = getRootAttribute(myFile, KnownAttribute.PARSER_IMPORTS).asStrings();
     boolean rootParser = parserClass.equals(myGrammarRootParser);
     Set<String> imports = new LinkedHashSet<>();
     if (!G.generateFQN) {
-      imports.add(C.ParserStateHolder);
-      imports.add(C.BuilderClass + ".Marker");
+      imports.add(C.PsiBuilderClass);
+      imports.add(C.PsiBuilderClass + ".Marker");
     }
     else {
       imports.add("#forced");
     }
-     imports.add(staticStarImport(myParserTypeHolderClass));
+    imports.add(staticStarImport(myTypeHolderClass));
     if (G.generateTokenSets && hasAtLeastOneTokenChoice(myFile, ownRuleNames)) {
-      imports.add(staticStarImport(myParserTypeHolderClass + "." + TOKEN_SET_HOLDER_NAME));
+      imports.add(staticStarImport(myTypeHolderClass + "." + TOKEN_SET_HOLDER_NAME));
     }
-    if (StringUtil.isNotEmpty(myParserUtilClass) && (G.parserApi == GenOptions.ParserApi.Classic || !myParserUtilClass.equals(GPUB_CLASS))) {
+    if (StringUtil.isNotEmpty(myParserUtilClass)) {
       imports.add(staticStarImport(myParserUtilClass));
-    }
-    if (G.parserApi == GenOptions.ParserApi.Syntax) {
-      imports.add(SyntaxConstants.RUNTIME_CLASS);
-      imports.add(staticStarImport(SyntaxConstants.RUNTIME_STATIC_METHOD_HOLDER));
-      imports.addAll(Arrays.stream(SyntaxConstants.MODIFIERS).toList());
     }
     if (!rootParser) {
       imports.add(staticStarImport(myGrammarRootParser));
     }
     else if (!G.generateFQN) {
-      imports.addAll(Arrays.asList(C.ParserElementTypeClass,
-                                   C.ParserOutputType,
-                                   C.ParserNodeSetClass));
-      if (G.parserApi != GenOptions.ParserApi.Syntax)
-        imports.addAll(List.of(C.PsiParserClass, 
-                               C.LightPsiParserClass));
-      else 
-        imports.addAll(Arrays.asList(
-          SyntaxConstants.RUNTIME_CLASS,
-          staticStarImport(SyntaxConstants.RUNTIME_STATIC_METHOD_HOLDER),
-          staticImport(SyntaxConstants.PRODUCTION_RESULT_FILE + ".prepareProduction"),
-          SyntaxConstants.KOTLIN_FUNCTION2_CLASS,
-          SyntaxConstants.KOTLIN_UNIT_CLASS
-        ));
+      imports.addAll(Arrays.asList(C.IElementTypeClass,
+                                   C.AstNodeClass,
+                                   C.TokenSetClass,
+                                   C.PsiParserClass,
+                                   C.LightPsiParserClass));
     }
     imports.addAll(parserImports);
 
     generateClassHeader(parserClass, imports,
-                        SUPPRESS_WARNINGS_ANNO + "({\"SimplifiableIfStatement\", \"UnusedAssignment\"})",
+                        "",//SUPPRESS_WARNINGS_ANNO + "({\"SimplifiableIfStatement\", \"UnusedAssignment\"})",
                         Java.CLASS, "",
-                        rootParser && G.parserApi != GenOptions.ParserApi.Syntax ? C.PsiParserClass : "",
-                        rootParser && G.parserApi != GenOptions.ParserApi.Syntax ? C.LightPsiParserClass : "");
+                        rootParser ? C.PsiParserClass : "",
+                        rootParser ? C.LightPsiParserClass : "");
 
     if (rootParser) {
-      generateRootParserContent(parserClass);
+      generateRootParserContent();
     }
     for (String ruleName : ownRuleNames) {
       BnfRule rule = Objects.requireNonNull(myFile.getRule(ruleName));
@@ -640,28 +504,20 @@ public class ParserGenerator {
         call = generateParserInstance(body);
         reversedLambdas.put(body, name);
       }
-      String parserClassShortName = (G.parserApi == GenOptions.ParserApi.Classic) ? "Parser" 
-                                                                                  : SyntaxConstants.RUNTIME_PARSER_INTERFACE;
-      out("static final %s %s = %s;", parserClassShortName, name, call);
+      out("static final Parser " + name + " = " + call + ";");
       myRenderedLambdas.put(name, parserClass);
     });
   }
 
   private @NotNull String generateParserInstance(@NotNull String body) {
-    return G.javaVersion > 6
-           ? format("(%s, %s) -> %s", N.stateHolder, N.level, body)
-           : format("new Parser() {\npublic boolean parse(%s %s, int %s) {\nreturn %s;\n}\n}",
-                    shorten(C.ParserStateHolder), N.stateHolder, N.level, body);
+    return "{ %s, %s -> %s }".formatted(NAMES.builder, NAMES.level, body);
   }
 
   private void generateMetaMethodFields() {
-    String parserClassShortName = (G.parserApi == GenOptions.ParserApi.Classic) ? "Parser"
-                                                                                : SyntaxConstants.RUNTIME_PARSER_INTERFACE;
-    take(myMetaMethodFields).forEach((field, call) -> 
-                                       out(String.format("private static final %s %s = %s;", parserClassShortName, field, call)));
+    take(myMetaMethodFields).forEach((field, call) -> out("private static final Parser " + field + " = " + call + ";"));
   }
 
-  private void generateRootParserContent(String parserClass) {
+  private void generateRootParserContent() {
     BnfRule rootRule = myFile.getRule(myGrammarRoot);
     List<BnfRule> extraRoots = new ArrayList<>();
     for (String ruleName : myRuleInfos.keySet()) {
@@ -677,90 +533,89 @@ public class ParserGenerator {
 
     List<Set<String>> extendsSet = buildExtendsSet(myGraphHelper.getRuleExtendsMap());
     boolean generateExtendsSets = !extendsSet.isEmpty();
-    String shortET = shorten(C.ParserElementTypeClass);
-    String shortAN = shorten(C.ParserOutputType);
-    String shortPB = shorten(C.ParserStateHolder);
-    String shortTS = shorten(C.ParserNodeSetClass);
-    String shortMarker = G.generateFQN ? C.BuilderClass + ".Marker" : "Marker";
-    if (G.parserApi == GenOptions.ParserApi.Syntax){
-      out("public %s parse(%s %s, %s %s) {", shortAN, shortET, N.root, shortPB, N.stateHolder);
-      out("parseLight(%s, %s);", N.root, N.stateHolder);
-      String prepareProductionCall = (G.generateFQN) ? SyntaxConstants.PRODUCTION_RESULT_FILE + ".prepareProduction" : "prepareProduction"; 
-      out("return %s(%s.getSyntaxBuilder());", prepareProductionCall, N.stateHolder);
-      out("}");
-      newLine();
-      out("public void parseLight(%s %s, %s %s) {", shortET, N.root, shortPB, N.stateHolder);
-      out("boolean %s;", N.result);
-      String unit = shorten(SyntaxConstants.KOTLIN_UNIT_CLASS);
-      String function2 = format("%s<%s, %s, %s>", shorten(SyntaxConstants.KOTLIN_FUNCTION2_CLASS), shortET, shortPB, unit);
-      out("%s %s = new %s(){", function2, N.parse, function2);
-      out(shorten(OVERRIDE_ANNO));
-      out("public %s invoke(%s %s, %s %s) {", unit, shortET, N.root, shortPB, N.stateHolder);
-      out("parseLight(%s, %s);", N.root, N.stateHolder);
-      out("return %s.INSTANCE;", unit);
-      out("}");
-      out("};");
-      out("");
-      out("%s.init(%s, %s);", N.stateHolder, N.parse, generateExtendsSets ? "EXTENDS_SETS_" : null);
-    }
-    else {
-      out("public %s parse(%s %s, %s %s) {", shortAN, shortET, N.root, shortPB, N.stateHolder);
-      out("parseLight(%s, %s);", N.root, N.stateHolder);
-      out("return %s.getTreeBuilt();", N.stateHolder);
-      out("}");
-      newLine();
-      out("public void parseLight(%s %s, %s %s) {", shortET, N.root, shortPB, N.stateHolder);
-      out("boolean %s;", N.result);
-      out("%s = adapt_builder_(%s, %s, %s, %s);", N.stateHolder, N.root, N.stateHolder, "this", generateExtendsSets ? "EXTENDS_SETS_" : null);
-    }
+    String shortElementType = shorten(C.IElementTypeClass);
+    String shortASTNode = shorten(C.AstNodeClass);
+    String shortPsiBuilder = shorten(C.PsiBuilderClass);
+    String shortTokenSet = shorten(C.TokenSetClass);
+    String shortMarker = !G.generateFQN ? "Marker" : C.PsiBuilderClass + ".Marker";
 
-    out("%s %s = enter_section_(%s, 0, _COLLAPSE_, null);", shortMarker, N.marker, N.stateHolder);
-    out("%s = parse_root_(%s, %s);", N.result, N.root, N.stateHolder);
-    out("exit_section_(%s, 0, %s, %s, %s, true, TRUE_CONDITION);", N.stateHolder, N.marker, N.root, N.result);
+    // parse() method
+    out("override fun parse(%s: %s, %s: %s): %s {", NAMES.root, shortElementType, NAMES.builder, shortPsiBuilder, shortASTNode);
+    out("parseLight(%s, %s)", NAMES.root, NAMES.builder);
+    out("return %s.getTreeBuilt()", NAMES.builder);
     out("}");
+
     newLine();
-    out("protected boolean parse_root_(%s %s, %s %s) {", shortET, N.root, shortPB, N.stateHolder);
-    out("return parse_root_(%s, %s, 0);", N.root, N.stateHolder);
+
+    // parseLight() method
+    out("override fun parseLight(%s: %s, %s: %s) {", NAMES.root, shortElementType, NAMES.builder, shortPsiBuilder);
+    out("var %s: Boolean", NAMES.result);
+    out("val %s = adapt_builder_(%s, %s, this, %s)", NAMES.builder, NAMES.root, NAMES.builder,
+        generateExtendsSets ? "EXTENDS_SETS_" : null);
+    out("val %s: %s = enter_section_(%s, 0, _COLLAPSE_, null)", NAMES.marker, shortMarker, NAMES.builder);
+    out("%s = parse_root_(%s, %s)", NAMES.result, NAMES.root, NAMES.builder);
+    out("exit_section_(%s, 0, %s, %s, %s, true, TRUE_CONDITION)", NAMES.builder, NAMES.marker, NAMES.root, NAMES.result);
     out("}");
+
     newLine();
-    out("static boolean parse_root_(%s %s, %s %s, int %s) {", shortET, N.root, shortPB, N.stateHolder, N.level);
+
+    // main parse_root_() method
+    out("protected fun parse_root_(%s: %s, %s: %s): Boolean {", NAMES.root, shortElementType, NAMES.builder, shortPsiBuilder);
+    out("return parse_root_(%s, %s, 0)", NAMES.root, NAMES.builder);
+    out("}");
+
+    newLine();
+
+    // this is where statics begin - have to convert them to
+    // methods in a companion object
+
+    out("static boolean parse_root_(%s %s, %s %s, int %s) {", shortElementType, NAMES.root, shortPsiBuilder, NAMES.builder, NAMES.level);
     if (extraRoots.isEmpty()) {
-      out("return %s;", rootRule == null ? "false" : generateNodeCall(rootRule, null, myGrammarRoot).render());
+      out("return %s;", rootRule == null ? "false" : generateNodeCall(rootRule, null, myGrammarRoot).render(NAMES));
     }
     else {
       boolean first = true;
-      out("boolean %s;", N.result);
+      out("boolean %s;", NAMES.result);
       for (BnfRule rule : extraRoots) {
         String elementType = getElementType(rule);
-        out("%sif (%s == %s) {", first ? "" : "else ", N.root, elementType);
-        String nodeCall = generateNodeCall(ObjectUtils.notNull(rootRule, rule), null, rule.getName()).render();
-        out("%s = %s;", N.result, nodeCall);
+        out("%sif (%s == %s) {", first ? "" : "else ", NAMES.root, elementType);
+        String nodeCall = generateNodeCall(ObjectUtils.notNull(rootRule, rule), null, rule.getName()).render(NAMES);
+        out("%s = %s;", NAMES.result, nodeCall);
         out("}");
         if (first) first = false;
       }
       out("else {");
-      out("%s = %s;", N.result, rootRule == null ? "false" : generateNodeCall(rootRule, null, myGrammarRoot).render());
+      out("%s = %s;", NAMES.result, rootRule == null ? "false" : generateNodeCall(rootRule, null, myGrammarRoot).render(NAMES));
       out("}");
-      out("return %s;", N.result);
+      out("return %s;", NAMES.result);
     }
     out("}");
     newLine();
+
+    // let's assume we're in a companion object here already
     if (generateExtendsSets) {
-        out("public static final %s[] EXTENDS_SETS_ = new %s[] {", shortTS, shortTS);
-      StringBuilder sb = new StringBuilder();
-      for (Set<String> elementTypes : extendsSet) {
-        int i = 0;
-        for (String elementType : elementTypes) {
-          if (i > 0) sb.append(i % 4 == 0 ? ",\n" : ", ");
-          sb.append(elementType);
-          i++;
-        }
-        out("create_token_set_(%s),", sb);
-        sb.setLength(0);
-      }
-      out("};");
+      generateExtendsSet(extendsSet);
       newLine();
     }
+  }
+
+  private void generateExtendsSet(@NotNull List<Set<String>> extendsSet) {
+    String shortTokenSet = shorten(C.TokenSetClass);
+
+    out("val EXTENDS_SETS_: Array<%s> = arrayOf(", shortTokenSet);
+    final var builder = new StringBuilder();
+    for (Set<String> elementTypes : extendsSet) {
+      int i = 0;
+      for (String elementType : elementTypes) {
+        if (i > 0) builder.append(i % 4 == 0 ? ",\n" : ", ");
+        builder.append(elementType);
+        i++;
+      }
+      out("create_token_set_(%s),", builder);
+      builder.setLength(0);
+    }
+    out(")");
+    newLine();
   }
 
   private @NotNull List<Set<String>> buildExtendsSet(@NotNull MultiMap<BnfRule, BnfRule> map) {
@@ -792,18 +647,8 @@ public class ParserGenerator {
     return result;
   }
 
-  private enum Java {CLASS, INTERFACE, ABSTRACT_CLASS}
-
-  private void generateClassHeader(String className,
-                                   Set<String> imports,
-                                   String annos,
-                                   Java javaType,
-                                   String... supers) {
-    generateFileHeader(className);
-    String packageName = StringUtil.getPackageName(className);
-    String shortClassName = StringUtil.getShortName(className);
-    out("package %s;", packageName);
-    newLine();
+  @Override
+  protected @NotNull Set<String> collectClasses(Set<String> imports, String packageName) {
     Set<String> includedPackages = JBIterable.from(imports)
       .filter(o -> !o.startsWith("static") && o.endsWith(".*"))
       .map(o -> StringUtil.trimEnd(o, ".*"))
@@ -813,62 +658,12 @@ public class ParserGenerator {
       if (includedPackages.contains(info.intfPackage)) includedClasses.add(StringUtil.getShortName(info.intfClass));
       if (includedPackages.contains(info.implPackage)) includedClasses.add(StringUtil.getShortName(info.implClass));
     }
-    NameShortener shortener = new NameShortener(packageName, !G.generateFQN);
-    shortener.addImports(imports, includedClasses);
-    for (String s : shortener.getImports()) {
-      out("import %s;", s);
-    }
-    if (G.generateFQN && imports.contains("#forced")) {
-      for (String s : JBIterable.from(imports).filter(o -> !"#forced".equals(o))) {
-        out("import %s;", s);
-      }
-    }
-    newLine();
-    StringBuilder sb = new StringBuilder();
-    for (int i = 0, supersLength = supers.length; i < supersLength; i++) {
-      String aSuper = supers[i];
-      if (StringUtil.isEmpty(aSuper)) continue;
-      if (imports.contains(aSuper + ";")) {
-        aSuper = StringUtil.getShortName(aSuper);
-      }
-      if (i == 0) {
-        sb.append(" extends ").append(shortener.shorten(aSuper));
-      }
-      else if (javaType != ParserGenerator.Java.INTERFACE && i == 1) {
-        sb.append(" implements ").append(shortener.shorten(aSuper));
-      }
-      else {
-        sb.append(", ").append(shortener.shorten(aSuper));
-      }
-    }
-    if (StringUtil.isNotEmpty(annos)) {
-      out(shortener.shorten(annos));
-    }
-    out("public %s %s%s {", Case.LOWER.apply(javaType.name()).replace('_', ' '), shortClassName, sb.toString());
-    newLine();
-    myShortener = shortener;
+    return includedClasses;
   }
 
-  private void generateFileHeader(String className) {
-    String header = getRootAttribute(myFile, KnownAttribute.CLASS_HEADER, className);
-    String text = StringUtil.isEmpty(header) ? "" : getStringOrFile(header);
-    if (StringUtil.isNotEmpty(text)) {
-      out(text);
-    }
-    resetOffset();
-  }
-
-  private String getStringOrFile(String classHeader) {
-    try {
-      File file = new File(mySourcePath, classHeader);
-      if (file.exists()) return FileUtil.loadFile(file);
-    }
-    catch (IOException ex) {
-      LOG.error(ex);
-    }
-    return classHeader.startsWith("//") || classHeader.startsWith("/*") ? classHeader :
-           StringUtil.countNewLines(classHeader) > 0 ? "/*\n" + classHeader + "\n*/" :
-           "// " + classHeader;
+  @NotNull
+  protected String generatePackageName(String className) {
+    return StringUtil.getPackageName(className);
   }
 
   /**
@@ -880,15 +675,13 @@ public class ParserGenerator {
    *               for {@code <<p>> | some} in {@code meta rule ::= (<<p>> | some)* }.
    */
   private void generateMetaMethod(@NotNull String methodName, @NotNull List<String> parameterNames, boolean isRule) {
-    String parserClassShortName = (G.parserApi == GenOptions.ParserApi.Classic) ? "Parser"
-                                                                                : SyntaxConstants.RUNTIME_PARSER_INTERFACE;
-    String parameterList = parameterNames.stream().map(it -> parserClassShortName + " " + it).collect(joining(", "));
+    String parameterList = parameterNames.stream().map(it -> "Parser " + it).collect(joining(", "));
     String argumentList = String.join(", ", parameterNames);
     String metaParserMethodName = getWrapperParserMetaMethodName(methodName);
-    String call = format("%s(%s, %s + 1, %s)", methodName, N.stateHolder, N.level, argumentList);
+    String call = format("%s(%s, %s + 1, %s)", methodName, NAMES.builder, NAMES.level, argumentList);
     // @formatter:off
-    out("%sstatic %s %s(%s) {", isRule ? "" : "private ", parserClassShortName, metaParserMethodName, parameterList);
-      out("return %s;", generateParserInstance(call));
+    out("%sstatic Parser %s(%s) {", isRule ? "" : "private ", metaParserMethodName, parameterList);
+    out("return %s;", generateParserInstance(call));
     out("}");
     // @formatter:on
   }
@@ -929,13 +722,12 @@ public class ParserGenerator {
     List<BnfExpression> children = isSingleNode ? Collections.singletonList(node) : getChildExpressions(node);
     String frameName = !children.isEmpty() && firstNonTrivial && !Rule.isMeta(rule) ? quote(getRuleDisplayName(rule, !isPrivate)) : null;
 
-    String parserClass = (G.parserApi == GenOptions.ParserApi.Classic) ? "Parser" : SyntaxConstants.RUNTIME_PARSER_INTERFACE;
-    String extraParameters = metaParameters.stream().map(it -> ", " + parserClass + " " + it).collect(joining());
+    String extraParameters = metaParameters.stream().map(it -> ", Parser " + it).collect(joining());
     out("%sstatic boolean %s(%s %s, int %s%s) {", !isRule ? "private " : isPrivate ? "" : "public ",
-        funcName, shorten(myStateHolderClass), N.stateHolder, N.level, extraParameters);
+        funcName, shorten(C.PsiBuilderClass), NAMES.builder, NAMES.level, extraParameters);
     if (isSingleNode) {
       if (isPrivate && !isLeftInner && recoverWhile == null && frameName == null) {
-        String nodeCall = generateNodeCall(rule, node, getNextName(funcName, 0)).render();
+        String nodeCall = generateNodeCall(rule, node, getNextName(funcName, 0)).render(NAMES);
         out("return %s;", nodeCall);
         out("}");
         if (node instanceof BnfExternalExpression && ((BnfExternalExpression)node).getExpressionList().size() > 1) {
@@ -949,7 +741,7 @@ public class ParserGenerator {
     }
 
     if (!children.isEmpty()) {
-      out("if (!recursion_guard_(%s, %s, \"%s\")) return false;", N.stateHolder, N.level, funcName);
+      out("if (!recursion_guard_(%s, %s, \"%s\")) return false;", NAMES.builder, NAMES.level, funcName);
     }
 
     if (recoverWhile == null && (isRule || firstNonTrivial)) {
@@ -961,7 +753,7 @@ public class ParserGenerator {
     boolean alwaysTrue = children.isEmpty() || type == BNF_OP_OPT || type == BNF_OP_ZEROMORE;
     boolean pinned = pinMatcher.active() && pinMatcher.shouldGenerate(children);
     if (!alwaysTrue) {
-      out("boolean %s%s%s;", N.result, children.isEmpty() ? " = true" : "", pinned ? format(", %s", N.pinned) : "");
+      out("boolean %s%s%s;", NAMES.result, children.isEmpty() ? " = true" : "", pinned ? format(", %s", NAMES.pinned) : "");
     }
 
     List<String> modifierList = new SmartList<>();
@@ -982,20 +774,20 @@ public class ParserGenerator {
     boolean sectionMaybeDropped = sectionRequiredSimple && type == BNF_CHOICE && elementTypeRef == null &&
                                   !ContainerUtil.exists(children, o -> isRollbackRequired(o, myFile));
     String modifiers = modifierList.isEmpty() ? "_NONE_" : StringUtil.join(modifierList, " | ");
-    String shortMarker = G.generateFQN ? C.BuilderClass + ".Marker" : "Marker";
+    String shortMarker = !G.generateFQN ? "Marker" : C.PsiBuilderClass + ".Marker";
     if (sectionRequiredSimple) {
       if (!sectionMaybeDropped) {
-        out("%s %s = enter_section_(%s);", shortMarker, N.marker, N.stateHolder);
+        out("%s %s = enter_section_(%s);", shortMarker, NAMES.marker, NAMES.builder);
       }
     }
     else if (sectionRequired) {
       boolean shortVersion = frameName == null && elementTypeRef == null;
       if (shortVersion) {
-        out("%s %s = enter_section_(%s, %s, %s);", shortMarker, N.marker, N.stateHolder, N.level, modifiers);
+        out("%s %s = enter_section_(%s, %s, %s);", shortMarker, NAMES.marker, NAMES.builder, NAMES.level, modifiers);
       }
       else {
-        out("%s %s = enter_section_(%s, %s, %s, %s, %s);", shortMarker, N.marker, N.stateHolder, N.level, modifiers,
-            elementTypeRef, frameName);
+        out("%s %s = enter_section_(%s, %s, %s, %s, %s);", shortMarker, NAMES.marker, NAMES.builder, NAMES.level, modifiers, elementTypeRef,
+            frameName);
       }
     }
 
@@ -1009,40 +801,40 @@ public class ParserGenerator {
           ConsumeType consumeType = getEffectiveConsumeType(rule, node, null);
           NodeCall tokenChoice = generateTokenChoiceCall(children, consumeType, funcName);
           if (tokenChoice != null) {
-            out("%s = %s;", N.result, tokenChoice.render());
+            out("%s = %s;", NAMES.result, tokenChoice.render(NAMES));
             break;
           }
         }
-        out("%s%s = %s;", i > 0 ? format("if (!%s) ", N.result) : "", N.result, nodeCall.render());
+        out("%s%s = %s;", i > 0 ? format("if (!%s) ", NAMES.result) : "", NAMES.result, nodeCall.render(NAMES));
       }
       else if (type == BNF_SEQUENCE) {
         if (skip[0] == 0) {
           ConsumeType consumeType = getEffectiveConsumeType(rule, node, null);
           nodeCall = generateTokenSequenceCall(children, i, pinMatcher, pinApplied, skip, nodeCall, false, consumeType);
           if (i == 0) {
-            out("%s = %s;", N.result, nodeCall.render());
+            out("%s = %s;", NAMES.result, nodeCall.render(NAMES));
           }
           else {
             if (pinApplied && G.generateExtendedPin) {
               if (i == childrenSize - 1) {
                 // do not report error for last child
                 if (i == p + 1) {
-                  out("%s = %s && %s;", N.result, N.result, nodeCall.render());
+                  out("%s = %s && %s;", NAMES.result, NAMES.result, nodeCall.render(NAMES));
                 }
                 else {
-                  out("%s = %s && %s && %s;", N.result, N.pinned, nodeCall.render(), N.result);
+                  out("%s = %s && %s && %s;", NAMES.result, NAMES.pinned, nodeCall.render(NAMES), NAMES.result);
                 }
               }
               else if (i == p + 1) {
-                out("%s = %s && report_error_(%s, %s);", N.result, N.result, N.stateHolder, nodeCall.render());
+                out("%s = %s && report_error_(%s, %s);", NAMES.result, NAMES.result, NAMES.builder, nodeCall.render(NAMES));
               }
               else {
-                out("%s = %s && report_error_(%s, %s) && %s;", N.result, N.pinned, N.stateHolder, nodeCall.render(),
-                    N.result);
+                out("%s = %s && report_error_(%s, %s) && %s;", NAMES.result, NAMES.pinned, NAMES.builder, nodeCall.render(NAMES),
+                    NAMES.result);
               }
             }
             else {
-              out("%s = %s && %s;", N.result, N.result, nodeCall.render());
+              out("%s = %s && %s;", NAMES.result, NAMES.result, nodeCall.render(NAMES));
             }
           }
         }
@@ -1053,27 +845,27 @@ public class ParserGenerator {
         if (pinned && !pinApplied && pinMatcher.matches(i, child)) {
           pinApplied = true;
           p = i;
-          out("%s = %s; // pin = %s", N.pinned, N.result, pinMatcher.pinValue);
+          out("%s = %s; // pin = %s", NAMES.pinned, NAMES.result, pinMatcher.pinValue);
         }
       }
       else if (type == BNF_OP_OPT) {
-        out(nodeCall.render() + ";");
+        out(nodeCall.render(NAMES) + ";");
       }
       else if (type == BNF_OP_ONEMORE || type == BNF_OP_ZEROMORE) {
         if (type == BNF_OP_ONEMORE) {
-          out("%s = %s;", N.result, nodeCall.render());
+          out("%s = %s;", NAMES.result, nodeCall.render(NAMES));
         }
-        out("while (%s) {", alwaysTrue ? "true" : N.result);
-        out("int %s = current_position_(%s);", N.pos, N.stateHolder);
-        out("if (!%s) break;", nodeCall.render());
-        out("if (!empty_element_parsed_guard_(%s, \"%s\", %s)) break;", N.stateHolder, funcName, N.pos);
+        out("while (%s) {", alwaysTrue ? "true" : NAMES.result);
+        out("int %s = current_position_(%s);", NAMES.pos, NAMES.builder);
+        out("if (!%s) break;", nodeCall.render(NAMES));
+        out("if (!empty_element_parsed_guard_(%s, \"%s\", %s)) break;", NAMES.builder, funcName, NAMES.pos);
         out("}");
       }
       else if (type == BNF_OP_AND) {
-        out("%s = %s;", N.result, nodeCall.render());
+        out("%s = %s;", NAMES.result, nodeCall.render(NAMES));
       }
       else if (type == BNF_OP_NOT) {
-        out("%s = !%s;", N.result, nodeCall.render());
+        out("%s = !%s;", NAMES.result, nodeCall.render(NAMES));
       }
       else {
         addWarning("unexpected: " + type);
@@ -1081,20 +873,20 @@ public class ParserGenerator {
     }
 
     if (sectionRequired) {
-      String resultRef = alwaysTrue ? "true" : N.result;
+      String resultRef = alwaysTrue ? "true" : NAMES.result;
       if (!hooks.isEmpty()) {
         for (Map.Entry<String, String> entry : hooks.entrySet()) {
           String hookName = toIdentifier(entry.getKey(), null, Case.UPPER);
-          out("register_hook_(%s, %s, %s);", N.stateHolder, hookName, entry.getValue());
+          out("register_hook_(%s, %s, %s);", NAMES.builder, hookName, entry.getValue());
         }
       }
       if (sectionRequiredSimple) {
         if (!sectionMaybeDropped) {
-          out("exit_section_(%s, %s, %s, %s);", N.stateHolder, N.marker, elementTypeRef, resultRef);
+          out("exit_section_(%s, %s, %s, %s);", NAMES.builder, NAMES.marker, elementTypeRef, resultRef);
         }
       }
       else {
-        String pinnedRef = pinned ? N.pinned : "false";
+        String pinnedRef = pinned ? NAMES.pinned : "false";
         String recoverCall;
         if (recoverWhile != null) {
           BnfRule predicateRule = myFile.getRule(recoverWhile);
@@ -1111,12 +903,11 @@ public class ParserGenerator {
         else {
           recoverCall = null;
         }
-        out("exit_section_(%s, %s, %s, %s, %s, %s);", N.stateHolder, N.level, N.marker, resultRef, pinnedRef,
-            recoverCall);
+        out("exit_section_(%s, %s, %s, %s, %s, %s);", NAMES.builder, NAMES.level, NAMES.marker, resultRef, pinnedRef, recoverCall);
       }
     }
 
-    out("return %s;", alwaysTrue ? "true" : N.result + (pinned ? format(" || %s", N.pinned) : ""));
+    out("return %s;", alwaysTrue ? "true" : NAMES.result + (pinned ? format(" || %s", NAMES.pinned) : ""));
     out("}");
     generateNodeChildren(rule, funcName, children, visited);
   }
@@ -1144,7 +935,7 @@ public class ParserGenerator {
         break;
       }
     }
-    StringBuilder sb = new StringBuilder(format("!nextTokenIsFast(%s, ", N.stateHolder));
+    StringBuilder sb = new StringBuilder(format("!nextTokenIsFast(%s, ", NAMES.builder));
 
     appendTokenTypes(sb, tokenTypes);
     sb.append(")");
@@ -1187,8 +978,8 @@ public class ParserGenerator {
       String condition = grouped.entrySet().stream().map(entry -> {
         ConsumeType consumeType = entry.getKey();
         List<String> tokenTypes = entry.getValue();
-        StringBuilder sb = new StringBuilder("!nextTokenIs")
-          .append(consumeType.getMethodSuffix()).append("(").append(N.stateHolder).append(", ");
+        StringBuilder sb = new StringBuilder("!");
+        sb.append("nextTokenIs").append(consumeType.getMethodSuffix()).append("(").append(NAMES.builder).append(", ");
         if (!dropFrameName && consumeType == ConsumeType.DEFAULT) sb.append(StringUtil.notNullize(frameName, "\"\"")).append(", ");
         appendTokenTypes(sb, tokenTypes);
         sb.append(")");
@@ -1254,7 +1045,8 @@ public class ParserGenerator {
 
   private @NotNull String formatMetaParamName(@NotNull String s) {
     String argName = s.trim();
-    return N.metaParamPrefix + (N.metaParamPrefix.isEmpty() || "_".equals(N.metaParamPrefix) ? argName : StringUtil.capitalize(argName));
+    return NAMES.metaParamPrefix +
+           (NAMES.metaParamPrefix.isEmpty() || "_".equals(NAMES.metaParamPrefix) ? argName : StringUtil.capitalize(argName));
   }
 
   private @Nullable String firstToElementType(String first) {
@@ -1300,9 +1092,9 @@ public class ParserGenerator {
     }
     if (list.size() < 2) return nodeCall;
     skip[0] = list.size() - 1;
-    String consumeMethodName = (rollbackOnFail ? ("parseTokens") : ("consumeTokens")) +
+    String consumeMethodName = (rollbackOnFail ? "parseTokens" : "consumeTokens") +
                                (consumeType == ConsumeType.SMART ? consumeType.getMethodSuffix() : "");
-    return new ConsumeTokensCall(consumeMethodName, N.stateHolder, pin, list);
+    return new ConsumeTokensCall(consumeMethodName, pin, list);
   }
 
   private @Nullable NodeCall generateTokenChoiceCall(@NotNull List<BnfExpression> children,
@@ -1321,7 +1113,7 @@ public class ParserGenerator {
 
     String tokenSetName = getTokenSetConstantName(funcName);
     myTokenSets.put(tokenSetName, tokens);
-    return new ConsumeTokenChoiceCall(consumeType, tokenSetName, N.stateHolder);
+    return new ConsumeTokenChoiceCall(consumeType, tokenSetName);
   }
 
   @NotNull
@@ -1344,13 +1136,11 @@ public class ParserGenerator {
       if (attributeName != null) {
         return generateConsumeToken(consumeType, attributeName);
       }
-      return generateConsumeTextToken(consumeType,
-                                      text.startsWith("\"") ? value : StringUtil.escapeStringCharacters(value),
-                                      N.stateHolder);
+      return generateConsumeTextToken(consumeType, text.startsWith("\"") ? value : StringUtil.escapeStringCharacters(value));
     }
     else if (type == BNF_NUMBER) {
       ConsumeType consumeType = getEffectiveConsumeType(rule, node, forcedConsumeType);
-      return generateConsumeTextToken(consumeType, text, N.stateHolder);
+      return generateConsumeTextToken(consumeType, text);
     }
     else if (type == BNF_REFERENCE_OR_TOKEN) {
       String value = GrammarUtil.stripQuotesAroundId(text);
@@ -1367,13 +1157,13 @@ public class ParserGenerator {
           String parserClassName = StringUtil.getShortName(parserClass);
           boolean renderClass = !parserClass.equals(myGrammarRootParser) && !parserClass.equals(ruleInfo(rule).parserClass);
           if (info == null) {
-            return new MethodCall(renderClass, parserClassName, method, N.stateHolder, N.level);
+            return new MethodCall(renderClass, parserClassName, method);
           }
           else {
             if (renderClass) {
               method = StringUtil.getQualifiedName(parserClassName, method);
             }
-            return new ExpressionMethodCall(method, N.stateHolder, N.level, info.getPriority(subRule) - 1);
+            return new ExpressionMethodCall(method, info.getPriority(subRule) - 1);
           }
         }
       }
@@ -1401,7 +1191,7 @@ public class ParserGenerator {
     else if (type == BNF_EXTERNAL_EXPRESSION) {
       List<BnfExpression> expressions = ((BnfExternalExpression)node).getExpressionList();
       if (expressions.size() == 1 && Rule.isMeta(rule)) {
-        return new MetaParameterCall(formatMetaParamName(expressions.get(0).getText()), N.stateHolder, N.level);
+        return new MetaParameterCall(formatMetaParamName(expressions.get(0).getText()));
       }
       else {
         return generateExternalCall(rule, expressions, nextName);
@@ -1410,10 +1200,10 @@ public class ParserGenerator {
     else {
       List<String> extraArguments = collectMetaParametersFormatted(rule, node);
       if (extraArguments.isEmpty()) {
-        return new MethodCall(false, StringUtil.getShortName(ruleInfo(rule).parserClass), nextName, N.stateHolder, N.level);
+        return new MethodCall(false, StringUtil.getShortName(ruleInfo(rule).parserClass), nextName);
       }
       else {
-        return new MetaMethodCall(null, nextName, N.stateHolder, N.level, map(extraArguments, MetaParameterArgument::new));
+        return new MetaMethodCall(null, nextName, map(extraArguments, MetaParameterArgument::new));
       }
     }
   }
@@ -1509,8 +1299,8 @@ public class ParserGenerator {
         }
       }
     }
-    return Rule.isMeta(targetRule) ? new MetaMethodCall(targetClassName, method, N.stateHolder, N.level, arguments)
-                                   : new MethodCallWithArguments(method, N.stateHolder, N.level, arguments);
+    return Rule.isMeta(targetRule) ? new MetaMethodCall(targetClassName, method, arguments)
+                                   : new MethodCallWithArguments(method, arguments);
   }
 
   private @NotNull NodeArgument generateWrappedNodeCall(@NotNull BnfRule rule, @Nullable BnfExpression nested, @NotNull String nextName) {
@@ -1547,7 +1337,7 @@ public class ParserGenerator {
       return StringUtil.getShortName(targetClass) + "." + constantName;
     }
     else if (!myParserLambdas.containsKey(constantName)) {
-      String call = nodeCall.render();
+      String call = nodeCall.render(NAMES);
       myParserLambdas.put(constantName, call);
       if (!call.startsWith(nextName + "(")) {
         myInlinedChildNodes.add(nextName);
@@ -1562,13 +1352,11 @@ public class ParserGenerator {
 
   private @NotNull NodeCall generateConsumeToken(@NotNull ConsumeType consumeType, @NotNull String tokenName) {
     myTokensUsedInGrammar.add(tokenName);
-    return new ConsumeTokenCall(consumeType, getElementType(tokenName), N.stateHolder);
+    return new ConsumeTokenCall(consumeType, getElementType(tokenName));
   }
 
-  public static @NotNull NodeCall generateConsumeTextToken(@NotNull ConsumeType consumeType,
-                                                           @NotNull String tokenText,
-                                                           @NotNull String stateHolder) {
-    return new ConsumeTokenCall(consumeType, "\"" + tokenText + "\"", stateHolder);
+  public static @NotNull NodeCall generateConsumeTextToken(@NotNull ConsumeType consumeType, @NotNull String tokenText) {
+    return new ConsumeTokenCall(consumeType, "\"" + tokenText + "\"");
   }
 
   private String getElementType(String token) {
@@ -1581,27 +1369,17 @@ public class ParserGenerator {
 
   /*ElementTypes******************************************************************/
 
-  private void generateElementTypesHolder(String className,
-                                          Map<String, BnfRule> sortedCompositeTypes,
-                                          String tokenTypeFactory,
-                                          String elementTypeClassBase,
-                                          String tokenSetClass,
-                                          boolean generatePsi,
-                                          boolean generateWithSyntax) {
-    String tokenTypeClass =
-      (!generateWithSyntax) ?
-      getRootAttribute(myFile, KnownAttribute.TOKEN_TYPE_CLASS) :
-      SyntaxConstants.SYNTAX_ELEMENT_TYPE;
+  private void generateElementTypesHolder(String className, Map<String, BnfRule> sortedCompositeTypes) {
+    String tokenTypeClass = getRootAttribute(myFile, KnownAttribute.TOKEN_TYPE_CLASS);
+    String tokenTypeFactory = getRootAttribute(myFile, KnownAttribute.TOKEN_TYPE_FACTORY);
     Set<String> imports = new LinkedHashSet<>();
-    imports.add(elementTypeClassBase);
-    if (generatePsi) {
+    imports.add(C.IElementTypeClass);
+    if (G.generatePsi) {
       imports.add(C.PsiElementClass);
       imports.add(C.AstNodeClass);
     }
     if (G.generateTokenSets && !myTokenSets.isEmpty()) {
-      imports.add(tokenSetClass);
-      if (G.parserApi == GenOptions.ParserApi.Syntax)
-        imports.add(SyntaxConstants.TOKEN_SET_FILE);
+      imports.add(C.TokenSetClass);
     }
     boolean useExactElements = "all".equals(G.generateExactTypes) || G.generateExactTypes.contains("elements");
     boolean useExactTokens = "all".equals(G.generateExactTypes) || G.generateExactTypes.contains("tokens");
@@ -1610,24 +1388,23 @@ public class ParserGenerator {
     for (String elementType : sortedCompositeTypes.keySet()) {
       BnfRule rule = sortedCompositeTypes.get(elementType);
       RuleInfo ruleInfo = ruleInfo(rule);
-      String elementTypeClass =
-        (!generateWithSyntax) ? getAttribute(rule, KnownAttribute.ELEMENT_TYPE_CLASS) : SyntaxConstants.SYNTAX_ELEMENT_TYPE;
-      String elementTypeFactory = (!generateWithSyntax) ? getAttribute(rule, KnownAttribute.ELEMENT_TYPE_FACTORY) : null;
+      String elementTypeClass = getAttribute(rule, KnownAttribute.ELEMENT_TYPE_CLASS);
+      String elementTypeFactory = getAttribute(rule, KnownAttribute.ELEMENT_TYPE_FACTORY);
       compositeToClassAndFactoryMap.put(elementType, Trinity.create(elementTypeClass, elementTypeFactory, ruleInfo));
-      if (elementTypeFactory != null) {
+      if (useFactory(elementTypeFactory)) {
         imports.add(StringUtil.getPackageName(elementTypeFactory));
       }
       else {
         ContainerUtil.addIfNotNull(imports, elementTypeClass);
       }
     }
-    if (tokenTypeFactory != null) {
+    if (useFactory(tokenTypeFactory)) {
       imports.add(StringUtil.getPackageName(tokenTypeFactory));
     }
     else {
       ContainerUtil.addIfNotNull(imports, tokenTypeClass);
     }
-    if (generatePsi) {
+    if (G.generatePsi) {
       imports.addAll(ContainerUtil.sorted(
         JBIterable.from(sortedCompositeTypes.values()).map(this::ruleInfo).map(o -> o.implPackage + ".*").toSet()));
       if (G.generatePsiClassesMap) {
@@ -1646,13 +1423,13 @@ public class ParserGenerator {
       for (String elementType : sortedCompositeTypes.keySet()) {
         Trinity<String, String, RuleInfo> info = compositeToClassAndFactoryMap.get(elementType);
         String elementCreateCall;
-        if (info.second == null) {
+        if (!useFactory(info.second)) {
           elementCreateCall = "new " + shorten(info.first);
         }
         else {
           elementCreateCall = shorten(StringUtil.getPackageName(info.second)) + "." + StringUtil.getShortName(info.second);
         }
-        String fieldType = useExactElements && info.first != null ? info.first : elementTypeClassBase;
+        String fieldType = useExactElements && info.first != null ? info.first : C.IElementTypeClass;
         String callFix = elementCreateCall.endsWith("IElementType") ? ", null" : "";
         out("%s %s = %s(\"%s\"%s);", shorten(fieldType), elementType, elementCreateCall, elementType, callFix);
       }
@@ -1662,14 +1439,14 @@ public class ParserGenerator {
       String exactType = null;
       Map<String, String> sortedTokens = new TreeMap<>();
       String tokenCreateCall;
-      if (tokenTypeFactory == null) {
+      if (!useFactory(tokenTypeFactory)) {
         exactType = tokenTypeClass;
         tokenCreateCall = "new " + shorten(exactType);
       }
       else {
         tokenCreateCall = shorten(StringUtil.getPackageName(tokenTypeFactory)) + "." + StringUtil.getShortName(tokenTypeFactory);
       }
-      String fieldType = ObjectUtils.notNull(useExactTokens ? exactType : null, elementTypeClassBase);
+      String fieldType = ObjectUtils.notNull(useExactTokens ? exactType : null, C.IElementTypeClass);
       for (String tokenText : mySimpleTokens.keySet()) {
         String tokenName = ObjectUtils.chooseNotNull(mySimpleTokens.get(tokenText), tokenText);
         if (isIgnoredWhitespaceToken(tokenName, tokenText)) continue;
@@ -1681,11 +1458,11 @@ public class ParserGenerator {
         out("%s %s = %s(\"%s\"%s);", shorten(fieldType), tokenType, tokenCreateCall, StringUtil.escapeStringCharacters(tokenString),
             callFix);
       }
-      generateTokenSets(tokenSetClass);
+      generateTokenSets();
     }
-    if (generatePsi && G.generatePsiClassesMap) {
+    if (G.generatePsi && G.generatePsiClassesMap) {
       String shortJC = shorten(CommonClassNames.JAVA_LANG_CLASS);
-      String shortET = shorten(C.ElementTypeBaseClass);
+      String shortET = shorten(C.IElementTypeClass);
       newLine();
       out("class Classes {");
       newLine();
@@ -1697,7 +1474,7 @@ public class ParserGenerator {
       out("return %s.unmodifiableSet(ourMap.keySet());", shorten(CommonClassNames.JAVA_UTIL_COLLECTIONS));
       out("}");
       newLine();
-      String type = shorten("java.util.LinkedHashMap<" + C.ElementTypeBaseClass + ", java.lang.Class<?>>");
+      String type = shorten("java.util.LinkedHashMap<" + C.IElementTypeClass + ", java.lang.Class<?>>");
       out("private static final %s ourMap = new %1$s();", type);
       newLine();
       out("static {");
@@ -1711,7 +1488,7 @@ public class ParserGenerator {
       out("}");
       out("}");
     }
-    if (generatePsi && G.generatePsiFactory) {
+    if (G.generatePsi && G.generatePsiFactory) {
       newLine();
       boolean first1;
       boolean first2;
@@ -1724,7 +1501,7 @@ public class ParserGenerator {
         if (info.mixedAST) continue;
         if (first1) {
           out("public static %s createElement(%s node) {", shorten(C.PsiElementClass), shorten(C.AstNodeClass));
-          out("%s type = node.getElementType();", shorten(C.ElementTypeBaseClass));
+          out("%s type = node.getElementType();", shorten(C.IElementTypeClass));
         }
         String psiClass = getAttribute(rule, KnownAttribute.PSI_IMPL_PACKAGE) + "." + getRulePsiClassName(rule, myImplClassFormat);
         out((!first1 ? "else " : "") + "if (type == " + elementType + ") {");
@@ -1745,7 +1522,7 @@ public class ParserGenerator {
         if (first2) {
           if (!first1) newLine();
           out("public static %s createElement(%s type) {", shorten(COMPOSITE_PSI_ELEMENT_CLASS),
-              shorten(C.ElementTypeBaseClass));
+              shorten(C.IElementTypeClass));
         }
         String psiClass = getRulePsiClassName(rule, myImplClassFormat);
         out((!first2 ? "else" : "") + " if (type == " + elementType + ") {");
@@ -1762,6 +1539,10 @@ public class ParserGenerator {
     out("}");
   }
 
+  protected boolean useFactory(String factory) {
+    return factory != null;
+  }
+
   private boolean isIgnoredWhitespaceToken(@NotNull String tokenName, @NotNull String tokenText) {
     return isRegexpToken(tokenText) &&
            !myTokensUsedInGrammar.contains(tokenName) &&
@@ -1769,7 +1550,7 @@ public class ParserGenerator {
            !matchesAny(getRegexpTokenRegexp(tokenText), "a", "1", "_", ".");
   }
 
-  private void generateTokenSets(String tokenSetType) {
+  private void generateTokenSets() {
     if (myTokenSets.isEmpty()) {
       return;
     }
@@ -1777,13 +1558,9 @@ public class ParserGenerator {
     out("interface %s {", TOKEN_SET_HOLDER_NAME);
     Map<String, String> reverseMap = new HashMap<>();
     myTokenSets.forEach((name, tokens) -> {
-      String creationMethod =
-        (Objects.equals(tokenSetType, SyntaxConstants.TOKEN_SET_CLASS)) ?
-        shorten(SyntaxConstants.TOKEN_SET_FILE) + ".syntaxElementTypeSetOf(%s)" :
-        shorten(tokenSetType) + ".create(%s)";
-      String value = format(creationMethod, tokenSetString(tokens));
+      String value = format("TokenSet.create(%s)", tokenSetString(tokens));
       String alreadyRendered = reverseMap.putIfAbsent(value, name);
-      out("%s %s = %s;", shorten(tokenSetType), name, ObjectUtils.chooseNotNull(alreadyRendered, value));
+      out("TokenSet %s = %s;", name, ObjectUtils.chooseNotNull(alreadyRendered, value));
     });
     out("}");
   }
@@ -1810,141 +1587,6 @@ public class ParserGenerator {
     out("}");
   }
 
-  private void generatePsiImpl(BnfRule rule, RuleInfo info) {
-    String psiClass = info.implClass;
-    String superInterface = info.intfClass;
-    String stubName = info.realStubClass;
-    String implSuper = info.realSuperClass;
-
-    Set<String> imports = new LinkedHashSet<>();
-    if (!G.generateFQN) {
-      imports.addAll(Arrays.asList(CommonClassNames.JAVA_UTIL_LIST,
-                                   "org.jetbrains.annotations.*",
-                                   C.AstNodeClass,
-                                   C.PsiElementClass));
-      if (myVisitorClassName != null) imports.add(PSI_ELEMENT_VISITOR_CLASS);
-      imports.add(myPsiTreeUtilClass);
-    }
-    else {
-      imports.add("#forced");
-    }
-    imports.add(staticStarImport(myPsiElementTypeHolderClass));
-    if (!G.generateFQN) {
-      if (StringUtil.isNotEmpty(implSuper)) imports.add(implSuper);
-      imports.add(StringUtil.getPackageName(superInterface) + ".*");
-      imports.add(StringUtil.notNullize(myVisitorClassName));
-      imports.add(StringUtil.notNullize(myPsiImplUtilClass));
-      imports.addAll(getRuleMethodTypesToImport(rule));
-    }
-
-    Function<String, String> substitutor = stubName == null ? ParserGeneratorUtil::unwrapTypeArgumentForParamList : o -> {
-      String oo = unwrapTypeArgumentForParamList(o);
-      if (oo.equals(o)) return o;
-      int idx = oo.lastIndexOf(" ");
-      return idx == -1 ? stubName : oo.substring(0, idx) + " " + stubName;
-    };
-
-    Set<BnfRule> visited = new HashSet<>();
-    List<NavigatablePsiElement> constructors = Collections.emptyList();
-    BnfRule topSuperRule = null;
-    String topSuperClass = null;
-    for (BnfRule next = rule; next != null && next != topSuperRule; ) {
-      if (!visited.add(next)) {
-        addWarning(rule.getName() + " employs cyclic inheritance");
-        break;
-      }
-      topSuperRule = next;
-      String superClass = ruleInfo(next).realSuperClass;
-      if (superClass == null) continue;
-      next = getEffectiveSuperRule(myFile, next);
-      if (next != null && next != topSuperRule && getAttribute(topSuperRule, KnownAttribute.MIXIN) == null) continue;
-      topSuperClass = getRawClassName(superClass);
-      constructors = myJavaHelper.findClassMethods(topSuperClass, JavaHelper.MethodType.CONSTRUCTOR, "*", -1);
-      if (!constructors.isEmpty()) break;
-    }
-    if (!G.generateFQN) {
-      for (NavigatablePsiElement m : constructors) {
-        collectMethodTypesToImport(Collections.singletonList(m), false, imports);
-      }
-      if (stubName != null && constructors.isEmpty()) imports.add(G.fallbackStubElementType);
-      if (stubName != null) imports.add(stubName);
-    }
-
-    if (!G.generateTokenTypes) {
-      // add parser static imports hoping external token constants are there
-      for (RuleMethodsHelper.MethodInfo methodInfo : myRulesMethodsHelper.getFor(rule)) {
-        if (methodInfo.rule == null && !StringUtil.isEmpty(methodInfo.name)) {
-          for (String s : getRootAttribute(myFile, KnownAttribute.PARSER_IMPORTS).asStrings()) {
-            if (s.startsWith("static ")) imports.add(s);
-          }
-          break;
-        }
-      }
-    }
-
-    Java javaType = info.isAbstract ? Java.ABSTRACT_CLASS : Java.CLASS;
-    generateClassHeader(psiClass, imports, "", javaType, implSuper, superInterface);
-    String shortName = StringUtil.getShortName(psiClass);
-    if (constructors.isEmpty()) {
-      out("public " + shortName + "(" + shorten(C.AstNodeClass) + " node) {");
-      out("super(node);");
-      out("}");
-      newLine();
-      if (stubName != null) {
-        out("public " + shortName + "(" +
-            shorten(stubName) + " stub, " +
-            shorten(G.fallbackStubElementType) + " stubType) {");
-        out("super(stub, stubType);");
-        out("}");
-        newLine();
-      }
-    }
-    else {
-      for (NavigatablePsiElement m : constructors) {
-        List<String> types = myJavaHelper.getMethodTypes(m);
-        Function<Integer, List<String>> annoProvider = i -> myJavaHelper.getParameterAnnotations(m, (i - 1) / 2);
-        out("public " + shortName + "(" + getParametersString(types, 1, 3, substitutor, annoProvider, myShortener) + ") {");
-        out("super(" + getParametersString(types, 1, 2, substitutor, annoProvider, myShortener) + ");");
-        out("}");
-        newLine();
-      }
-    }
-    if (myVisitorClassName != null) {
-      String shortened = shorten(myVisitorClassName);
-      String r = G.visitorValue != null ? "<" + G.visitorValue + ">" : "";
-      String t = G.visitorValue != null ? " " + G.visitorValue : "void";
-      String ret = G.visitorValue != null ? "return " : "";
-      boolean addOverride = topSuperRule != rule && info.mixin == null;
-      if (!addOverride && topSuperClass != null) {
-        main:
-        for (String curClass = topSuperClass; curClass != null; curClass = myJavaHelper.getSuperClassName(curClass)) {
-          for (NavigatablePsiElement m : myJavaHelper.findClassMethods(
-            curClass, JavaHelper.MethodType.INSTANCE, "accept", 1, myVisitorClassName)) {
-            String paramType = myJavaHelper.getMethodTypes(m).get(1);
-            if (getRawClassName(paramType).endsWith(StringUtil.getShortName(myVisitorClassName))) {
-              addOverride = true;
-              break main;
-            }
-          }
-        }
-      }
-      if (addOverride) {
-        out(shorten(OVERRIDE_ANNO));
-      }
-      out("public " + r + t + " accept(" + shorten(NOTNULL_ANNO) + " " + shortened + r + " visitor) {");
-      out(ret + "visitor.visit" + getRulePsiClassName(rule, null) + "(this);");
-      out("}");
-      newLine();
-      out(shorten(OVERRIDE_ANNO));
-      out("public void accept(" + shorten(NOTNULL_ANNO) + " " + shorten(PSI_ELEMENT_VISITOR_CLASS) + " visitor) {");
-      out("if (visitor instanceof " + shortened + ") accept((" + shortened + ")visitor);");
-      out("else super.accept(visitor);");
-      out("}");
-      newLine();
-    }
-    generatePsiClassMethods(rule, info, false);
-    out("}");
-  }
 
   private void generatePsiClassMethods(BnfRule rule, RuleInfo info, boolean intf) {
     Set<String> visited = new TreeSet<>();
@@ -2205,7 +1847,7 @@ public class ParserGenerator {
       String className = shorten(targetInfo.rule == null ? C.PsiElementClass : getAccessorType(targetInfo.rule));
 
       String type = (many ? shorten(CommonClassNames.JAVA_UTIL_LIST) + "<" : "") + className + (many ? "> " : " ");
-      String curId = N.psiLocal + (count++);
+      String curId = NAMES.psiLocal + (count++);
       if (!context.isEmpty()) {
         if (cardinality.optional()) {
           sb.append("if (").append(context).append(" == null) return null;\n");
@@ -2240,7 +1882,7 @@ public class ParserGenerator {
         context += ".";
         boolean isLast = index.equals("last");
         if (isLast) index = context + "size() - 1";
-        curId = N.psiLocal + (count++);
+        curId = NAMES.psiLocal + (count++);
         if (last) {
           sb.append("return ");
         }
@@ -2275,7 +1917,7 @@ public class ParserGenerator {
     }
 
     boolean many = cardinality.many();
-    String s = targetRule == null ? PSI_ELEMENT_CLASS : getAccessorType(targetRule);
+    String s = targetRule == null ? C.PsiElementClass : getAccessorType(targetRule);
     String className = shorten(s);
     String getterName = getGetterName(methodInfo.name);
     String tail = intf ? "();" : "() {";
@@ -2318,72 +1960,19 @@ public class ParserGenerator {
     Function<String, String> substitutor = ParserGeneratorUtil::unwrapTypeArgumentForParamList;
     out("%s%s%s %s(%s)%s%s",
         intf ? "" : "public ",
-        getGenericClauseString(genericParameters, myShortener),
+        getGenericClauseString(genericParameters, getShortener()),
         returnType,
         methodName,
-        getParametersString(methodTypes, offset, 3, substitutor, annoProvider, myShortener),
-        getThrowsString(exceptionList, myShortener),
+        getParametersString(methodTypes, offset, 3, substitutor, annoProvider, getShortener()),
+        getThrowsString(exceptionList, getShortener()),
         intf ? ";" : " {");
     if (!intf) {
       String implUtilRef = shorten(StringUtil.notNullize(myPsiImplUtilClass, KnownAttribute.PSI_IMPL_UTIL_CLASS.getName()));
-      String string = getParametersString(methodTypes, offset, 2, substitutor, annoProvider, myShortener);
+      String string = getParametersString(methodTypes, offset, 2, substitutor, annoProvider, getShortener());
       out("%s%s.%s(this%s);", "void".equals(returnType) ? "" : "return ", implUtilRef, methodName,
           string.isEmpty() ? "" : ", " + string);
       out("}");
     }
     newLine();
-  }
-
-  /*Syntax******************************************************************/
-  private void generateElementTypesConverter(String elementTypesConverter,
-                                             String typeHolderClass,
-                                             String syntaxElementTypeHolderClass,
-                                             Map<String, BnfRule> sortedCompositeTypes) {
-    var converterInterface = SyntaxConstants.SYNTAX_ELEMENT_TYPE_CONVERTER_FACTORY;
-    Set<String> imports = new LinkedHashSet<>();
-    imports.add(typeHolderClass);
-    imports.add(syntaxElementTypeHolderClass);
-    imports.add(IELEMENTTYPE_CLASS);
-    imports.add(SyntaxConstants.SYNTAX_ELEMENT_TYPE);
-    imports.add(converterInterface);
-    imports.add(SyntaxConstants.SYNTAX_ELEMENT_TYPE_CONVERTER);
-    imports.add(SyntaxConstants.SYNTAX_ELEMENT_TYPE_CONVERTER_FILE);
-    imports.add(NOTNULL_ANNO);
-    imports.add(SyntaxConstants.KOTLIN_PAIR_CLASS);
-    imports.add(OVERRIDE_ANNO);
-
-    generateClassHeader(elementTypesConverter, imports, "", Java.CLASS, "", converterInterface);
-
-    out(shorten(OVERRIDE_ANNO));
-    out("public %s %s getElementTypeConverter() {", shorten(NOTNULL_ANNO), shorten(SyntaxConstants.SYNTAX_ELEMENT_TYPE_CONVERTER));
-    out("return %s.elementTypeConverterOf(", shorten(SyntaxConstants.SYNTAX_ELEMENT_TYPE_CONVERTER_FILE));
-    var sortedCompositeTypesArr = sortedCompositeTypes.keySet().toArray(new String[0]);
-    var generateTokenTypeConversions = G.generateTokenTypes && !mySimpleTokens.isEmpty();
-    for (int i = 0; i < sortedCompositeTypesArr.length; i++) {
-      String elementType = sortedCompositeTypesArr[i];
-      out("new %s<%s, %s>(%s.%s, %s.%s)" + (i != sortedCompositeTypesArr.length - 1 || generateTokenTypeConversions ? "," : ""),
-          shorten(SyntaxConstants.KOTLIN_PAIR_CLASS),
-          shorten(SyntaxConstants.SYNTAX_ELEMENT_TYPE), shorten(IELEMENTTYPE_CLASS),
-          shorten(syntaxElementTypeHolderClass), elementType,
-          shorten(typeHolderClass), elementType);
-    }
-    if (G.generateTokenTypes && !mySimpleTokens.isEmpty()) {
-      newLine();
-      var mySimpleTokensArr = mySimpleTokens.keySet().toArray(new String[0]);
-      for (int i = 0; i < mySimpleTokensArr.length; i++) {
-        var tokenText = mySimpleTokensArr[i];
-        String tokenName = ObjectUtils.chooseNotNull(mySimpleTokens.get(tokenText), tokenText);
-        if (isIgnoredWhitespaceToken(tokenName, tokenText)) continue;
-        var elementType = getElementType(tokenName);
-        out("new %s<%s, %s>(%s.%s, %s.%s)" + (i != mySimpleTokensArr.length - 1 ? "," : ""),
-            shorten(SyntaxConstants.KOTLIN_PAIR_CLASS),
-            shorten(SyntaxConstants.SYNTAX_ELEMENT_TYPE), shorten(IELEMENTTYPE_CLASS), 
-            shorten(syntaxElementTypeHolderClass), elementType, 
-            shorten(typeHolderClass), elementType);
-      }
-    }
-    out(");");
-    out("}");
-    out("}");
   }
 }
